...
            android:textSize="32sp"
            android:textStyle="bold" />


        <!-- Event Image -->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/eventFormPosterImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="Event Poster"
            android:scaleType="centerCrop"
            android:src="@drawable/sample_image"
            app:shapeAppearanceOverlay="@style/RoundedImageCorners" />

        <Button
            android:id="@+id/eventFormUploadImage"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:backgroundTint="@color/accent_blue"
            android:fontFamily="@font/poppins_bold"
            android:text="Upload Image"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!-- Event Title -->
        <EditText
            android:id="@+id/eventFormTitle"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/view_rounded_text"
            android:fontFamily="@font/poppins"
            android:hint="Event Title*"
...
            android:paddingLeft="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/text_secondary" />

        <!-- Location -->
        <EditText
            android:id="@+id/eventFormLocation"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/view_rounded_text"
            android:fontFamily="@font/poppins"
            android:hint="Location*"
...
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eventFormRegStartDate"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:background="@drawable/view_rounded_text"
                android:fontFamily="@font/poppins"
                android:hint="Reg. Start Date*"
...

            <Space
                android:layout_width="8dp"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eventFormRegEndDate"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:background="@drawable/view_rounded_text"
                android:fontFamily="@font/poppins"
                android:hint="Reg. End Date*"
...
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eventFormStartDate"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:background="@drawable/view_rounded_text"
                android:fontFamily="@font/poppins"
                android:hint="Event Start Date*"
...

            <Space
                android:layout_width="8dp"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eventFormEndDate"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:background="@drawable/view_rounded_text"
                android:fontFamily="@font/poppins"
                android:hint="Event End Date*"
...
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eventFormStartTime"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:background="@drawable/view_rounded_text"
                android:fontFamily="@font/poppins"
                android:hint="Event Start Time*"
...

            <Space
                android:layout_width="8dp"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eventFormEndTime"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:background="@drawable/view_rounded_text"
                android:fontFamily="@font/poppins"
                android:hint="Event End Time*"
...
                android:textColor="@color/white"
                android:textColorHint="@color/text_secondary" />
        </LinearLayout>

        <!-- Description -->
        <EditText
            android:id="@+id/eventFormDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="12dp"
            android:background="@drawable/view_rounded_text"
            android:fontFamily="@font/poppins"
...
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <EditText
                android:id="@+id/eventFormFee"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:background="@drawable/view_rounded_text"
                android:fontFamily="@font/poppins"
                android:hint="Event Fee (FREE)"
...

            <Space
                android:layout_width="8dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/eventFormCapacity"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:background="@drawable/view_rounded_text"
                android:fontFamily="@font/poppins"
                android:hint="Event Capacity*"
...

            <Space
                android:layout_width="8dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/eventFormAdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#1D9BF0"
                android:text="Done"
                android:textColor="@color/white" />
...
